force-app/main/default/objects/THOR_Maintenance_Plan__c.object
<CustomObject>
    <fields>
        <fullName>autorizeGroup__c</fullName>
        <label>autorizeGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>callNumber__c</fullName>
        <label>callNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cycleStart__c</fullName>
        <label>cycleStart</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>factory__c</fullName>
        <label>factory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noItem__c</fullName>
        <label>noItem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scheduledPreriod__c</fullName>
        <label>scheduledPreriod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scheduledUnit__c</fullName>
        <label>scheduledUnit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strategy__c</fullName>
        <label>strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemStatus__c</fullName>
        <label>systemStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maintenance Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Maintenance Plan Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>